--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "roave/security-advisories": "dev-master",
-        "zendframework/zend-mvc": "^3.0",
-        "codingmatters/kernel": "^1.0 || ~0.1"
+        "zendframework/zend-mvc": "^3.0"
     },
     "require-dev": {
         "zendframework/zend-test": "^3.0",
