fixed template and configuration

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "roave/security-advisories": "dev-master",
-        "zendframework/zend-mvc": "^3.0"
+        "codingmatters/site-module-ini": "^1.0 || ^0.5"
     },
     "require-dev": {
         "zendframework/zend-test": "^3.0",
@@ -33,7 +33,7 @@
             "DashboardTest\\": "test/"
         }
     },
-    "extra": {        
+    "extra": {
         "zf": {
             "module": "Dashboard",
             "config-provider": "Dashboard\\ConfigProvider"
