--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     ],
     "require": {
         "php": "^5.6 || ^7.0",
-        "roave/security-advisories": "dev-master",
-        "codingmatters/site-module-ini": "^1.0 || ^0.5"
+        "roave/security-advisories": "dev-master"
     },
     "require-dev": {
         "zendframework/zend-test": "^3.0",
