--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,11 @@
     ],
     "require": {
         "php": "^5.6 || ^7.0",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "zendframework/zend-mvc": "^3.0.2",
+        "zendframework/zend-mvc-i18n": "^1.0",
+        "zendframework/zend-mvc-plugins": "^1.0.1",
+        "zendframework/zend-navigation": "^2.8.1"
     },
     "require-dev": {
         "zendframework/zend-test": "^3.0",
